# datacloak

./: .gitignore  CI_HARDENING.md  DataCloak-Code-Review-Report.md  LICENSE  Makefile  README.md  SECURITY.md  TEST_GUIDE.md  agent.md  dev_spec.md  dev_spec_integration_tester.md  test-runner.sh  test_success.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  fuzz.yml
.husky/: pre-commit
data_obfuscator/: BENCHMARK.md  Cargo.toml  Dockerfile  RATE_LIMITING.md  README.md
data_obfuscator/benches/: quick_streaming_benchmark.rs  regex_redos.rs  secure_regex_bench.rs  streaming_benchmark.rs
data_obfuscator/config/: obfuscation_rules.json
data_obfuscator/examples/: rate_limiting_demo.rs
data_obfuscator/fuzz/: Cargo.toml
data_obfuscator/fuzz/fuzz_targets/: detect_regexes.rs
data_obfuscator/src/: config.rs  deobfuscator.rs  errors.rs  lib.rs  llm_client.rs  logger.rs  main.rs  metrics.rs  obfuscator.rs  secure_obfuscator.rs
data_obfuscator/tests/: concurrent_rate_limiting_test.rs  config_tests.rs  debug_performance.rs  debug_performance2.rs  deobfuscator_tests.rs  error_tests.rs  fuzz_smoke_test.rs  llm_client_tests.rs  logger_tests.rs  metrics_tests.rs  obfuscator_tests.rs  proptest_round_trip.proptest-regressions  proptest_round_trip.rs  rate_limiting_tests.rs  simple_rate_test.rs  stream_tests.rs  streaming_chunk_test.rs  streaming_obfuscation_tests.rs  validator_performance_test.rs
datacloak-api/: .env.example  Cargo.toml  MONITORING.md  README.md
datacloak-api/migrations/: V1__initial_schema.sql  V2__multi_column_support.sql
datacloak-api/src/: errors.rs  lib.rs  main.rs  models.rs
datacloak-api/src/api/v2/: analyze.rs  estimate.rs  mod.rs  monitoring.rs  openapi.rs  profile.rs
datacloak-api/src/middleware/: metrics.rs  mod.rs
datacloak-api/src/repositories/: analysis_log_repository.rs  analysis_run_repository.rs  checkpoint_repository.rs  eta_history_repository.rs  mod.rs  profile_cache_repository.rs
datacloak-api/src/services/: cache_layer.rs  eta_service.rs  integration_service.rs  mod.rs  monitoring.rs  profile_service.rs  worker_coordinator.rs
datacloak-api/src/streaming/: mod.rs  progress_tracker.rs  sse_stream.rs  stream_manager.rs
datacloak-api/tests/: api_tests.rs  cache_tests.rs  eta_tests.rs  integration_tests.rs  monitoring_tests.rs  streaming_tests.rs  worker_tests.rs
datacloak-api/tests/db/: repository_tests.rs
datacloak-cli/: Cargo.toml  README.md  test_exit_codes.sh  test_exit_simple.sh
datacloak-cli/src/: cli.rs  lib.rs  main.rs  mock_llm.rs  performance.rs  scenarios.rs  test_environment.rs  test_framework.rs  test_harness.rs
datacloak-cli/test-scenarios/customer-churn/: config.yaml
datacloak-cli/test-scenarios/financial-fraud/: config.yaml
datacloak-cli/test-scenarios/medical-records/: config.yaml
datacloak-cli/tests/: cli_dry_run.rs  cli_multifield_tests.rs  cli_profile_tests.rs  e2e_tests.rs  integration_tests.rs  mock_llm_tests.rs  performance_tests.rs  simple_mock_test.rs
datacloak-core/: Cargo.toml  README.md
datacloak-core/benches/: graph_benchmark.rs  ml_graph_benchmark.rs  ml_pipeline_integration_benchmark.rs  model_optimization_benchmark.rs  obfuscation.rs  obfuscation_bench.rs  performance_benchmark.rs  similarity_benchmark.rs
datacloak-core/docs/: feature-engineering-guide.md  ml-architecture.md  model-training-pipeline.md  performance-tuning-guide.md  troubleshooting-runbook.md
datacloak-core/examples/: basic_usage.rs  process_csv_files.rs  test_user_data.rs
datacloak-core/models/: README.md
datacloak-core/src/: adaptive_sampling.rs  bounded_cache.rs  bounded_obfuscator.rs  cache.rs  column_profiler.rs  crypto.rs  data_source.rs  detector.rs  errors.rs  feature_extractor.rs  lib.rs  llm_batch.rs  ml_classifier.rs  ml_graph_integration.rs  model_optimization.rs  obfuscator.rs  onnx_model.rs  patterns.rs  streaming.rs  streaming_detection.rs  test_coverage_improvements.rs  thread_config.rs
datacloak-core/src/graph/: column_graph.rs  mod.rs  ranking.rs  similarity.rs  similarity_simd.rs  visualization.rs
datacloak-core/src/graph/knn/: knn_index.rs  mod.rs  pure_rust_knn.rs
datacloak-core/src/performance/: cache_friendly.rs  memory_pool.rs  mod.rs  simd_ops.rs
datacloak-core/tests/: adaptive_sampling_tests.rs  bounded_cache_tests.rs  bounded_obfuscator_tests.rs  cache_crypto.rs  column_graph_tests.rs  enhanced_integration_tests.rs  integration_tests.rs  knn_index_tests.rs  ml_pipeline_integration_tests.rs  pagerank_tests.rs  performance_optimization_tests.rs  performance_regression_tests.rs  similarity_tests.rs  streaming_detection_tests.rs  systems_integration_tests.rs  thread_config_tests.rs
docs/: CLIENT_INTEGRATION_GUIDE.md  DataCloak sentiment-analysis-prd-Update.md  dev1-ml-engineer-tasks.md  dev2-systems-engineer-tasks.md  dev3-backend-engineer-tasks.md  dev4-integration-engineer-tasks.md  developer-tasks-overview.md  integration-guide-graph-components.md
scripts/: ci-local.sh
test-dashboard/: app.js  dashboard.js  index.html  server.py
