[lib]
name = "data_obfuscator"
path = "src/lib.rs"

[package]
name = "data_obfuscator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.13"
regex = "1.7"
tokio = { version = "1.29", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
prometheus = "0.14"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
mockito = "1"
