[lib]
name = "data_obfuscator"
path = "src/lib.rs"

[package]
name = "data_obfuscator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.13"
regex = "1.7"
tokio = { version = "1.29", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
prometheus = "0.14"
thiserror = "1.0"
validator = "0.20.0"
luhn = "1.0.1"
once_cell = "1.21.3"
governor = "0.10.0"

[dev-dependencies]
tempfile = "3"
mockito = "1"
criterion = "0.6.0"
validator = "0.20.0"
luhn = "1.0.1"
proptest = "1.7.0"

[[bench]]
name = "regex_redos"
harness = false

[[bench]]
name = "secure_regex_bench"
harness = false

[[bench]]
name = "streaming_benchmark"
harness = false

[[bench]]
name = "quick_streaming_benchmark"
harness = false
