[package]
name = "datacloak-core"
version = "0.1.0"
edition = "2021"
authors = ["DataCloak Team"]
description = "High-performance PII obfuscation library for large-scale data processing"
license = "MIT"

[lib]
name = "datacloak_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex with SIMD support
regex = "1.10"
aho-corasick = "1.1"  # For efficient multi-pattern matching

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# HTTP client for LLM
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "rustls-tls"] }
backoff = { version = "0.4", features = ["tokio"] }  # For exponential backoff

# Database connectivity
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.12"  # Connection pooling

# CSV and data processing
csv = "1.3"
memmap2 = "0.9"  # Memory-mapped files
rayon = "1.8"  # Parallel processing
crossbeam = "0.8"  # Lock-free data structures
dashmap = "5.5"  # Concurrent hashmap

# Compression
zstd = "0.13"  # For compressing mappings
bincode = "1.3"  # Efficient serialization

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Pattern detection
once_cell = "1.19"
strsim = "0.11"  # String similarity for pattern detection
unicode-segmentation = "1.10"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional ML support
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }
aes-gcm = "0.10.3"
rand = "0.9.1"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.8"
mockito = "1"
criterion = "0.5"  # Benchmarking
proptest = "1.4"  # Property-based testing

[features]
default = []
ml = ["candle-core", "candle-nn", "candle-transformers"]

[[bench]]
name = "obfuscation"
harness = false
